modules/k8s.istio-ingress/env/public/patch.gateway-listener.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-ingress

spec:
  listeners:
    - name: https-wild
      hostname: "*.outer-planes.net"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-cert
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "outer-planes.net"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-cert
      allowedRoutes:
        namespaces:
          from: All
    - name: http-wild
      hostname: "*.outer-planes.net"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      hostname: "outer-planes.net"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
